# mbhealth

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEAD_CODE_CLEANUP.md  GOOGLE_AI_ANALYSIS_FIX.md  README.md  blood_pressure_insights_enhancement.md  diagnose-argocd-issue.sh  docker-compose.k8s.yml  docker-compose.yml  dump.rdb  fix_const_braces.sh
.github/workflows/: ci.yaml  ci.yml
backend/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.optimized  Dockerfile.worker  ERROR_HANDLING_EXAMPLES.md  Makefile  alembic.ini  create_db.py  main.py  oldpp.toml  pyproject.toml  pytest.ini  requirements.txt  seed_workflow_templates.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 62a48937fff5_initial_schema_with_all_current_models.py  79919bea80cd_remove_analysis_comparison_tables.py  a552c483d3ed_update_care_teams_models_add_specialty_.py
backend/app/api/: deps.py  websocket.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: ai_analysis.py  analysis_comparison.py  analysis_schedules.py  analysis_workflows.py  auth.py  care_teams.py  families.py  health.py  health_data.py  notes.py  notifications.py  reports.py  timezone.py  users.py
backend/app/core/: celery_app.py  circuit_breaker.py  config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  ai_analysis.py  analysis_comparison.py  analysis_workflow.py  care_team.py  family.py  health_data.py  note.py  notification.py  user.py
backend/app/schemas/: ai_analysis.py  analysis_comparison.py  auth.py  care_team.py  family.py  health_data.py  health_data_response.py  note.py  notification.py  user.py
backend/app/services/: ai_analysis_service.py  analysis_comparison_service.py  analysis_history.py  analysis_scheduler.py  analysis_workflow_service.py  health_data.py  notification_service.py  pdf_report_service.py  retry_service.py  user.py
backend/app/services/ai_providers/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  google_provider.py  openai_provider.py  provider_factory.py
backend/app/tasks/: ai_analysis.py  analysis_scheduler_task.py  pdf_tasks.py
backend/app/utils/: timezone.py  units.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_analysis_workflow.py  test_ai_analysis_workflow_backup.py  test_auth_endpoints.py  test_health_data_api.py  test_health_data_endpoints.py
backend/tests/unit/: test_ai_services.py  test_ai_services_backup.py  test_ai_services_broken.py  test_auth.py  test_error_handling.py  test_health_data.py  test_pdf_report_service.py
docs/: API_REFERENCE.md  POSTGRESQL_SETUP.md  README.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  Dockerfile  Dockerfile.optimized  PUSH_NOTIFICATIONS_PLAN.md  PWA_IMPLEMENTATION.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AIAnalysisTabs.tsx  AddNoteForm.tsx  AnalysisCard.tsx  AnalysisComparisonInterface.tsx  AnalysisHelpGuide.tsx  AnalysisImprovementSuggestions.tsx  AnalysisPresets.tsx  AnalysisTrendVisualization.tsx  CareTeamCard.tsx  CareTeamInvitationsList.tsx  ChartConfigurationPanel.tsx  CreateAnalysisModal.tsx  CreateCareTeamModal.tsx  CreateFamilyModal.tsx  CreateProviderModal.tsx  CreateScheduleModal.tsx  CreateWorkflowModal.tsx  DashboardStats.tsx  DataVisualizationDashboard.tsx  DefaultModelField.tsx  EditHealthDataModal.tsx  EditProviderModal.tsx  EditScheduleModal.tsx  EnhancedBloodPressureInsights.tsx  EnhancedBloodSugarInsights.tsx  EnhancedHeartRateInsights.tsx  EnhancedWeightInsights.tsx  ErrorBoundary.tsx  FamilyCard.tsx  FoodAnalysisBox.tsx  HealthDataChart.tsx  HealthDataFilters.tsx  HealthDataTable.tsx  InvitationsList.tsx  InviteCareTeamMemberModal.tsx  InviteMemberModal.tsx  Layout.tsx  MainAnalysisInterface.tsx  MultiMetricForm.tsx  NotesList.tsx  (+28 more)
frontend/src/config/: environment.ts
frontend/src/contexts/: AuthContext.tsx  TimezoneContext.tsx
frontend/src/hooks/: useChartConfiguration.ts  useErrorHandler.ts
frontend/src/pages/: AIAnalysisPage.tsx  AIProvidersPage.tsx  AnalysisSchedulesPage.tsx  AnalysisWorkflowsPage.tsx  CareTeamsPage.tsx  DashboardPage.tsx  DataVisualizationPage.tsx  FamiliesPage.tsx  HealthDataPage.tsx  LoginPage.tsx  NotFoundPage.tsx  NotesPage.tsx  NotificationsPage.tsx  SettingsPage.tsx  SignupPage.tsx
frontend/src/services/: aiAnalysis.ts  analysisComparison.ts  analysisConfig.ts  analysisSchedules.ts  analysisWorkflow.ts  api.ts  auth.ts  careTeams.ts  families.ts  health.ts  notes.ts  notifications.ts  reports.ts  timezone.ts  user.ts  workflowsService.ts
frontend/src/styles/: mobile.css
frontend/src/test/: setup.ts
frontend/src/test/components/: AnalysisCard.test.tsx  DashboardStats.test.tsx  EnhancedBloodPressureInsights.test.tsx  FamilyCard.test.tsx  (+3 more)
frontend/src/types/: aiAnalysis.ts  analysisConfig.ts  analysisWorkflow.ts  auth.ts  careTeams.ts  families.ts  health.ts  notes.ts
frontend/src/utils/: dataAnalysis.ts  formatters.ts  units.ts
k8s/: README.md
k8s/argocd/: README.md
k8s/argocd/applications/: mbhealth-dev.yaml  mbhealth-production.yaml  mbhealth-staging.yaml
k8s/argocd/ingress/: argocd-nodeport.yaml
k8s/argocd/install/: install-argocd.sh
k8s/argocd/projects/: mbhealth-project.yaml
k8s/base/: README.md  kustomization.yaml
k8s/base/backend/: deployment.yaml  hpa.yaml  pdb.yaml
k8s/base/common/: configmap.yaml  ingress.yaml  migration-job.yaml  namespace.yaml  network-policies.yaml  secret.yaml
k8s/base/database/: postgres-statefulset.yaml
k8s/base/frontend/: deployment.yaml
k8s/base/redis/: redis-statefulset.yaml
k8s/base/worker/: deployment.yaml
k8s/docs/: docker-optimization.md
k8s/helm/mbhealth/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values-staging.yaml  values.yaml
k8s/scripts/: build-images.sh  deploy-helm.sh  deploy.sh
scripts/: setup.bat  setup.sh
(+24 files in other folders)
